# 2-jing-jung-community-be

./: .dockerignore  .gitignore  Dockerfile  README.md  backend-deployment.yaml  pyproject.toml
.github/workflows/: deploy.yml
app/: db.py  main.py  routes.py  services.py
app/api/: routes.py
app/models/: model.py
app/routers/: routes.py
app/schemas/: model.py
app/services/: controllers.py  services.py
